--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Android_Me</string>
+
+    <!-- COMPLETED: Remove or change this placeholder text -->
 </resources>
